set up a simple hello docker to try and use
Signed-off-by: Pengfei Xu <pengfei.xu@intel.com>

--- a/hello/Dockerfile
+++ b/hello/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu:20.04
 
 COPY ./test.sh /test.sh
-RUN chmod a+x /test.sh
+RUN chmod 755 /test.sh
+ENV HELLO="hello"
 
-ENTRYPOINT ["/test.sh","-t","test"]
+#ENTRYPOINT ["/test.sh"]
