--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -4,3 +4,4 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update && \
     apt-get -y install gcc mono-mcs && \
     rm -rf /var/lib/apt/lists/*
+RUN mkdir /src
