--- a/my.cfg
+++ b/my.cfg
@@ -12,7 +12,7 @@
 		"count": 4,
 		"qemu_args": "-drive if=pflash,format=raw,readonly=on,file=./OVMF_CODE.fd -cpu host -net nic,model=e1000 -enable-kvm",
 		"kernel": "/root/image/bzImage_514rc6i0819_93715b26deb1783677a6c6db9951930caebc698b",
-		"cmdline": "console=ttyS0 root=/dev/sda earlyprintk=serial net.ifnames=0",
+		"cmdline": "console=ttyS0 root=/dev/sda earlyprintk=serial net.ifnames=0 quiet plymouth.enable=0",
 		"cpu": 2,
 		"mem": 2048
 	}
